Lined to examples from index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
 <a name="jsav-animalscript-import-plugin" class="anchor" href="#jsav-animalscript-import-plugin"><span class="octicon octicon-link"></span></a>JSAV AnimalScript Import "Plugin"</h3>
 
 <p>You might have noticed, that this page is still under development :)</p>
+
+          <h3>Examples</h3>
+          <p>While I work on the documentation, you can take a look at these examples:</p>
+          <ul>
+            <li><a href="examples/hanoi.html">Towers of Hanoi</a></li>
+            <li><a href="examples/insertionsort.html">Insertionsort</a></li>
+            <li><a href="examples/lzw.html">LZW</a></li>
+          </ul>
         </section>
 
         <footer>
