--- a/examples/lzw.html
+++ b/examples/lzw.html
@@ -2,19 +2,18 @@
 <html>
   <head>
     <title>LZW - ASU Import Test</title>
-    <link rel="stylesheet" href="JSAV/css/JSAV.css" />
-    <link rel="stylesheet" href="../css/jsav-asu-import.css" />
+    <link rel="stylesheet" href="lib/JSAV.css" />
   </head>
   <body>
     <div id="asucontainer">
       <div class="jsavcounter"></div>
       <div class="jsavcontrols"></div>
     </div>
-    <script src="jquery.min.js"></script>
-    <script src="jquery-ui.min.js"></script>
-    <script src="JSAV/lib/jquery.transform.light.js"></script>
-    <script src="JSAV/lib/raphael.js"></script>
-    <script src="JSAV/build/JSAV.js"></script>
+    <script src="lib/jquery.min.js"></script>
+    <script src="lib/jquery-ui.min.js"></script>
+    <script src="lib/jquery.transform.light.js"></script>
+    <script src="lib/raphael.js"></script>
+    <script src="lib/JSAV-min.js"></script>
     <script src="../build/jsav-asu-import.js"></script>
     <script>
       var av = new JSAV("asucontainer");
